Fixed episodes link on tablet resolution from not being at the bottom on homepage

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2338,6 +2338,7 @@ section.not-found {
 	.section-showcase.highdef .episodes {
 		display: flex;
 		flex-wrap: wrap;
+		flex-direction: column;
 	}
 	.section-showcase.highdef .subheading {
 		flex-basis: 100%;
